2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Allow specifying a different database than mushin.
	* python/mushin/command/main.py:
	  Add a getServer() method on the root GTD command.
	  Use it everywhere.
	* python/mushin/command/list.py:
	* python/mushin/command/project.py:
	* python/mushin/command/thing.py:
	  Use it everywhere.

2011-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/parse.py:
	  Add some missing constants from gtd.py.  Caught by pychecker.

2010-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Properly filter on statuses too.  Makes search !waitingfor
	  work again.

2010-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/open-things-due/map.js:
	* python/mushin/common/app.py:
	  Use new views.
	  add getStatutes and getThingsByProject.
	* python/mushin/maemo/new.py:
	  Fix up contexts and statutes.
	* python/mushin/maemo/things.py:
	  Allow removing completed things.
	* python/mushin/maemo/start.py:
	  Add contexts and projects lists.
	* python/mushin/maemo/lists.py:
	  Make this  a 3 by 4 table, scrollable.

2010-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/by-context/map.js:
	* couchdb/views/by-project/map.js:
	* couchdb/views/by-status/map.js:
	  make them all similar.
	* couchdb/views/statuses/reduce.js (added):
	* couchdb/views/statuses/map.js (added):
	  Add.

2010-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Properly return whether we rescheduled.

2010-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Make sure save returns the Deferred.
	  Make add log a failure when adding/saving.
	* python/mushin/maemo/start.py:
	  Show an error on save.

2010-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>
